Add Support For Cardinality Of Types; Improve Docs
Added cardinality test cases as well as aggregation,
alternation and enumeration. Removed the missing links in
the documentation so paradox doesn't fail on them.